--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 68px;
+    height: 70px;
     background-color: #152232;
     color: #a0b1c5;
     display: flex;
@@ -27,29 +27,15 @@
     height: 100%;
 }
 
-.show-table {
-    width: 90%;
-    margin: 0% 5%;
-    row-gap: 5px;
-
-    tr {
-        border-collapse: collapse;
-        border-bottom: 5px solid $color-background;
-        background-color: #152232;
-    }
-
-    
-}
-
 .page {
-    height: 100%;
     width: 100%;
     background-color: $color-background;
     color: $color-text;
 }
 
-.body {
-    height: 100vh;
+#noShows {
+    margin: 10% auto;
+    text-align: center;
 }
 
 .shows {
