--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       <i class="fa-solid fa-download"></i>
       Export
     </button>
-    <button id="keiButton" type="button" class="btn btn-danger" (click)="showKeiBallotModal(keiBallotModal, { background: true, size: 'lg' })">
+    <button id="keiButton" type="button" class="btn btn-danger" (click)="showKeiBallotModal(keiBallotModal, { background: true, size: 'md' })">
       <i class="fa-solid fa-bullhorn"></i>
       Kei-chan
     </button>
