--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -168,7 +168,7 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="closeModal()"></button>
   </div>
   <div class="modal-body">
-    <p>Paste your import code here to import a ballot automatically. You can find the import code in the export menu or on in the speaker notes on the first slide of an exported presentation.</p>
+    <p>Paste your import code here to import a ballot automatically. You can find the import code in the export menu or in the speaker notes on the first slide of an exported presentation.</p>
     <p class="text-center">
       <b>
         <i class="fa-solid fa-triangle-exclamation"></i>
